--- a/reg-exp.html
+++ b/reg-exp.html
@@ -6,6 +6,9 @@
 <script type="text/javascript" src="./assert/js/match.js"></script>
 </head>
 <body>
-
+<script type="text/javascript">
+	var p = /[\/\.\-]/gi;
+	console.log('2016/10/30'.split(p));
+</script>
 </body>
 </html>
