생성사 함수 사용 하지 않기 기법 확인

--- a/constructor.html
+++ b/constructor.html
@@ -3,7 +3,7 @@
 <head>
     <title>Welcome to nginx!</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <script type="text/javascript" src="./assert/js/function.js"></script>
+    <script type="text/javascript" src="./assert/js/construtor.js"></script>
 </head>
 <body>
 
