Uncaught TypeError: Cannot set property 'textContent' of null 해결

--- a/element_id.html
+++ b/element_id.html
@@ -1,13 +1,12 @@
+
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <script type="text/javascript" src="assert/js/element_id.js"></script>
+<title>Welcome to nginx!</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 </head>
 <body>
-
-<span id="result2"> aa</span>
-
+    <span id = "result2"></span>
 </body>
+<script type="text/javascript" src="assert/js/element_id.js"></script>
 </html>
