add getTeg, add selector

--- a/element_id.html
+++ b/element_id.html
@@ -7,6 +7,16 @@
 </head>
 <body>
     <span id = "result2"></span>
+
+    <div id="list">
+        <a href="www.abc1.com">tag1</a>
+        <a href="www.abc2.com">tag2</a>
+        <a href="www.abc3.com">tag3</a>
+        <a href="www.abc4.com">tag4</a>
+        <a href="www.abc5.com">tag5</a>
+    </div>
+
 </body>
 <script type="text/javascript" src="assert/js/element_id.js"></script>
+
 </html>
